Fixed word break on material card

--- a/src/scss/layout-material.scss
+++ b/src/scss/layout-material.scss
@@ -32,7 +32,7 @@
     margin-right: 8px !important;
     margin-left: 8px !important;
     width: 0%;
-    overflow-wrap: break-word;
+    overflow-wrap: break-all;
 
   }
 }
